[package]
name = "nat_game"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.1.2", features = ["serialize"] }
bevy = "0.14.2"
clap = { version = "4.5.18", features = ["derive"] }
crossbeam = "0.8.4"
enum-ordinalize = "4.3.0"
leafwing-input-manager = "0.15.0"
lightyear = { version = "0.17.1", features = ["avian2d", "leafwing", "steam", "websocket", "webtransport"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 2
